TLINE-155 #comment fixed header spacing in company page

--- a/mobile/scss/modules/company.scss
+++ b/mobile/scss/modules/company.scss
@@ -17,6 +17,10 @@
       align-content: center;
     }
   }
+  
+  .profile-pane {
+      margin-top: 0px;
+  }
 
   .news-list{
     div{
